--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 *.bak_cir
 *.TNO
 *.inx
+Simulations/Transient Simulations/NLTLRetry_cir.inx
+Simulations/Transient Simulations/NLTLRetry.TNO
+Simulations/Transient Simulations/NLTLRetry.bak_cir
