Moved image directories for easier access

--- a/RohdeAndSchwarzWhitePaper/.project
+++ b/RohdeAndSchwarzWhitePaper/.project
@@ -16,6 +16,16 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>images/B1.pdf</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/B1.pdf</locationURI>
+		</link>
+		<link>
+			<name>images/B2.pdf</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/B2.pdf</locationURI>
+		</link>
+		<link>
 			<name>images/Board1</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
@@ -76,6 +86,36 @@
 			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/IMG_0143.JPG</locationURI>
 		</link>
 		<link>
+			<name>images/MeasuredACResponseB1.bmp</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/FSW_ScreenShot_2020-05-09_19-01-46.BMP</locationURI>
+		</link>
+		<link>
+			<name>images/MeasuredACResponseB2.BMP</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/FSW_ScreenShot_2020-05-09_18-12-41.BMP</locationURI>
+		</link>
+		<link>
+			<name>images/MeasuredSquare1VBias.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_30_054428.png</locationURI>
+		</link>
+		<link>
+			<name>images/MeasuredSquare2VBiasB1.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_38_062755.png</locationURI>
+		</link>
+		<link>
+			<name>images/MeasuredSquareResonse.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_32_054504.png</locationURI>
+		</link>
+		<link>
+			<name>images/MeasuredSquareResponseB1.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_28_062455.png</locationURI>
+		</link>
+		<link>
 			<name>images/Probed_Input_N10_N120.pdf</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/Simulations/Transient%20Simulations/Probed_Input_N10_N120.pdf</locationURI>
@@ -91,6 +131,106 @@
 			<locationURI>PARENT-1-PROJECT_LOC/Simulations/Transient%20Simulations/Probed_Input_N10_N240_With_SeriesResistance.pdf</locationURI>
 		</link>
 		<link>
+			<name>images/Screenshot_2020-05-17_21_053908.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_21_053908.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_22_053913.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_22_053913.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_23_054003.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_23_054003.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_24_054026.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_24_054026.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_25_054055.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_25_054055.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_26_054139.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_26_054139.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_27_054242.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_27_054242.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_28_054322.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_28_054322.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_29_054352.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_29_054352.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_31_054441.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_31_054441.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_33_062538.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_33_062538.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_34_062608.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_34_062608.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_35_062629.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_35_062629.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_36_062651.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_36_062651.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_37_062732.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_37_062732.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_39_062819.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_39_062819.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_40_063009.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_40_063009.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_42_063257.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_42_063257.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_43_063742.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_43_063742.png</locationURI>
+		</link>
+		<link>
+			<name>images/Screenshot_2020-05-17_45_063918.png</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_45_063918.png</locationURI>
+		</link>
+		<link>
 			<name>images/SetupWithBiasing.JPG</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/IMG_0132.JPG</locationURI>
@@ -104,146 +244,6 @@
 			<name>images/probed_noSeriesResistance.pdf</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/Simulations/Transient%20Simulations/Probed_Input_N10_N240_NoSeriesResistance.pdf</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/B1.pdf</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/B1.pdf</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/MeasuredACResponseB1.bmp</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/FSW_ScreenShot_2020-05-09_19-01-46.BMP</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/MeasuredSquare2VBias.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_38_062755.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/MeasuredSquareResponseB1.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_28_062455.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_33_062538.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_33_062538.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_34_062608.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_34_062608.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_35_062629.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_35_062629.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_36_062651.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_36_062651.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_37_062732.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_37_062732.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_39_062819.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_39_062819.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_40_063009.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_40_063009.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_42_063257.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_42_063257.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_43_063742.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_43_063742.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board1/Screenshot_2020-05-17_45_063918.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board1/Screenshot_2020-05-17_45_063918.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/B2.pdf</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/B2.pdf</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/MeasuredACResponseB2.BMP</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/FSW_ScreenShot_2020-05-09_18-12-41.BMP</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/MeasuredSquare1VBias.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_30_054428.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/MeasuredSquareResonse.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_32_054504.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_21_053908.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_21_053908.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_22_053913.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_22_053913.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_23_054003.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_23_054003.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_24_054026.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_24_054026.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_25_054055.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_25_054055.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_26_054139.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_26_054139.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_27_054242.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_27_054242.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_28_054322.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_28_054322.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_29_054352.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_29_054352.png</locationURI>
-		</link>
-		<link>
-			<name>images/Board2/Screenshot_2020-05-17_31_054441.png</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Measurements/RohdeAndSchwarzMeasurements/5_19_2020/Board2/Screenshot_2020-05-17_31_054441.png</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
