Started addressing Mr. Becks edits.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 Simulations/Transient Simulations/NLTLRetry_cir.inx
 Simulations/Transient Simulations/NLTLRetry.TNO
 Simulations/Transient Simulations/NLTLRetry.bak_cir
+RohdeAndSchwarzWhitePaper/Draft_White_Paper.prv/tmpuEjWnN/preview.dsc
